--- a/work/01_基础总结深入/02_数据_变量_内存5.html
+++ b/work/01_基础总结深入/02_数据_变量_内存5.html
@@ -8,7 +8,7 @@
 <!--
 问题: JS引擎如何管理内存?
   1. 内存生命周期
-    1). 分配需要的内存
+    1). 分配需要的内存 (声明式分配)
     2). 使用分配到的内存
     3). 不需要时将其释放/归还
   2. 释放内存
@@ -16,6 +16,15 @@
     * 存储对象的堆空间内存: 当内存没有引用指向时, 对象成为垃圾对象, 垃圾回收器后面就会回收释放此内存
 -->
 <script type="text/javascript">
+  var a = 3
+  a = 5
+  console.log(a)
+
+  function fn() {
+    var b = 5
+    var c = {}
+  }
+  fn() // 执行完后b, c是立即释放  c指向的对象在后面的某个时刻垃圾回收器回收释放
 
 </script>
 </body>
